수정이 기능 중 정보 수정/삭제 추가 홈 패널 수정 및 clubVO 변경 추천 기능 추가

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -9,13 +9,16 @@
 /crafts.png
 /dance.png
 /exercise.PNG
+/favorite.png
 /game.png
+/id.png
 /logo.png
 /music.png
+/myprofile.png
 /parenting.png
+/password.png
 /pet.png
 /society.png
 /travel.png
 /volunteer.png
-/tempImages.png
-/myprofile.png
+/으누profile.PNG
