--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,7 +3,10 @@
 /Search.png
 /Setting.png
 /backgroundImage.PNG
+/backimage.png
 /carmotorcycle.png
+/categoryLine.png
+/club/
 /com/
 /cooking.png
 /crafts.png
@@ -11,13 +14,16 @@
 /exercise.PNG
 /favorite.png
 /game.png
+/hi_test.PNG
 /id.png
 /logo.png
+/member/
 /music.png
-/myprofile.png
+/noticeicon.png
 /parenting.png
 /password.png
 /pet.png
+/shareimage.png
 /society.png
 /travel.png
 /volunteer.png
